// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthProvider should render a redirect component if auth data is invalid and shouldBeAuthorised === true 1`] = `
<div
  data-testid="redirect-page"
>
  Redirect Page
</div>
`;

exports[`AuthProvider should render a redirect component if auth data is valid and shouldBeAuthorised === false 1`] = `
<div
  data-testid="redirect-page"
>
  Redirect Page
</div>
`;

exports[`AuthProvider should render the children props if auth data is invalid and shouldBeAuthorised === true 1`] = `
<div
  data-testid="child-component"
>
  Child Page
</div>
`;

exports[`AuthProvider should render the children props if auth data is valid and shouldBeAuthorised === true 1`] = `
<div
  data-testid="child-component"
>
  Child Page
</div>
`;
